male female toggle

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -174,578 +174,578 @@ dogs:
       name: Chilli
       age:
       dog_image: /images/dogs/dog1.jpg
-      female:
-      male:
+      female: false
+      male: true
    -
       name: name
       age:
       dog_image: /images/dogs/dog2.jpg
-      female:
-      male:
+      female: false
+      male: true
    -
       name: name
       age:
       dog_image: /images/dogs/dog3.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog4.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog5.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog6.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog7.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog8.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog9.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog10.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog11.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog12.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog13.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog14.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog16.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog17.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog18.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog19.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog20.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog21.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog22.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog23.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog24.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog25.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog26.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog27.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog28.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog29.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog31.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog32.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog33.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog34.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog35.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog36.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog37.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog38.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog39.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog40.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog41.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog42.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog43.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog44.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog46.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog47.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog48.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog49.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog50.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog51.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog52.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog53.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog54.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog55.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog56.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog57.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog58.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog59.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog61.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog62.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog63.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog64.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog65.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog66.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog67.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog68.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog69.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog70.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog71.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog72.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog73.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog74.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog76.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog77.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog78.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog79.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog80.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog81.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog82.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog83.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog84.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog85.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog86.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog87.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog88.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog89.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog91.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog92.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog93.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog94.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog95.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog96.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog97.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog98.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog99.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog100.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog111.jpg
-      female:
-      male:
+      female: true
+      male: false
    -
       name: name
       age:
       dog_image: /images/dogs/dog112.jpg
-      female:
-      male:
+      female: true
+      male: false
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
