--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@ paypal_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
 dog-sanctuary_image: /images/TSP-6.jpg
 seo:
   title:
-  description: >-
-    Thai Street Paws Rescue is a non-profit organization that resues dogs in
-    need in the South of Thailand in Songkhla.
-  social_image:
+  description: Thai Street Paws Rescue is a non-profit organization that resues dogs in need in the South of Thailand in Songkhla.
+  social_image: /images/logo.png
   twitter_card:
   keywords:
   hide-from-google: false
