Updated 1 file via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -177,41 +177,41 @@ dogs:
       female: false
       male: true
    -
-      name: name
+      name: Dee
       age:
       dog_image: /images/dogs/dog2.jpg
       female: false
-      male: true
+      male: false
    -
-      name: name
+      name: Myla
       age:
       dog_image: /images/dogs/dog3.jpg
       female: true
       male: false
    -
-      name: name
+      name: Dixie
       age:
       dog_image: /images/dogs/dog4.jpg
       female: true
       male: false
    -
-      name: name
+      name: Casper
       age:
       dog_image: /images/dogs/dog5.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Rein
       age:
       dog_image: /images/dogs/dog6.jpg
-      female: true
+      female: false
       male: false
    -
-      name: name
+      name: Fraser
       age:
       dog_image: /images/dogs/dog7.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
       name: name
       age:
@@ -219,100 +219,100 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Bali
       age:
       dog_image: /images/dogs/dog9.jpg
       female: true
       male: false
    -
-      name: name
+      name: Sam
       age:
       dog_image: /images/dogs/dog10.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
       name: name
       age:
       dog_image: /images/dogs/dog11.jpg
-      female: true
+      female: false
       male: false
    -
-      name: name
+      name: Ludo
       age:
       dog_image: /images/dogs/dog12.jpg
-      female: true
+      female: false
       male: false
    -
-      name: name
+      name: Archie
       age:
       dog_image: /images/dogs/dog13.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Lucy
       age:
       dog_image: /images/dogs/dog14.jpg
       female: true
       male: false
    -
-      name: name
+      name: Ralph
       age:
       dog_image: /images/dogs/dog16.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Ashleigh
       age:
       dog_image: /images/dogs/dog17.jpg
       female: true
       male: false
    -
-      name: name
+      name: Harvey
       age:
       dog_image: /images/dogs/dog18.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Maya
       age:
       dog_image: /images/dogs/dog19.jpg
       female: true
       male: false
    -
-      name: name
+      name: Friday
       age:
       dog_image: /images/dogs/dog20.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Theo
       age:
       dog_image: /images/dogs/dog21.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Izzy
       age:
       dog_image: /images/dogs/dog22.jpg
       female: true
       male: false
    -
-      name: name
+      name: Red
       age:
       dog_image: /images/dogs/dog23.jpg
       female: true
       male: false
    -
-      name: name
+      name: Pax
       age:
       dog_image: /images/dogs/dog24.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
       name: name
       age:
       dog_image: /images/dogs/dog25.jpg
-      female: true
+      female: false
       male: false
    -
       name: name
@@ -375,7 +375,7 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Ruby
       age:
       dog_image: /images/dogs/dog37.jpg
       female: true
@@ -387,47 +387,47 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Nadia
       age:
       dog_image: /images/dogs/dog39.jpg
       female: true
       male: false
    -
-      name: name
+      name: Saffron
       age:
       dog_image: /images/dogs/dog40.jpg
       female: true
       male: false
    -
-      name: name
-      age:
+      name: Boo
+      age: '1'
       dog_image: /images/dogs/dog41.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Joey
       age:
       dog_image: /images/dogs/dog42.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Yuki
       age:
       dog_image: /images/dogs/dog43.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Diesal
       age:
       dog_image: /images/dogs/dog44.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Bruce
       age:
       dog_image: /images/dogs/dog46.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
       name: name
       age:
@@ -435,109 +435,109 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Siren
       age:
       dog_image: /images/dogs/dog48.jpg
       female: true
       male: false
    -
-      name: name
+      name: Nom Sod
       age:
       dog_image: /images/dogs/dog49.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Laura
       age:
       dog_image: /images/dogs/dog50.jpg
       female: true
       male: false
    -
-      name: name
+      name: Girl
       age:
       dog_image: /images/dogs/dog51.jpg
       female: true
       male: false
    -
-      name: name
+      name: Billie
       age:
       dog_image: /images/dogs/dog52.jpg
       female: true
       male: false
    -
-      name: name
+      name: Valentine
       age:
       dog_image: /images/dogs/dog53.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Beatrice
       age:
       dog_image: /images/dogs/dog54.jpg
       female: true
       male: false
    -
-      name: name
+      name: Goldie
       age:
       dog_image: /images/dogs/dog55.jpg
       female: true
       male: false
    -
-      name: name
+      name: Amy
       age:
       dog_image: /images/dogs/dog56.jpg
       female: true
       male: false
    -
-      name: name
+      name: Fred
       age:
       dog_image: /images/dogs/dog57.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Fern
       age:
       dog_image: /images/dogs/dog58.jpg
       female: true
       male: false
    -
-      name: name
+      name: Khalua
       age:
       dog_image: /images/dogs/dog59.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Isabella
       age:
       dog_image: /images/dogs/dog61.jpg
       female: true
       male: false
    -
-      name: name
+      name: Shay
       age:
       dog_image: /images/dogs/dog62.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Harley
       age:
       dog_image: /images/dogs/dog63.jpg
-      female: true
+      female: false
       male: false
    -
-      name: name
+      name: Charlize
       age:
       dog_image: /images/dogs/dog64.jpg
       female: true
       male: false
    -
-      name: name
+      name: Carter
       age:
       dog_image: /images/dogs/dog65.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Amalou
       age:
       dog_image: /images/dogs/dog66.jpg
       female: true
@@ -579,41 +579,41 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Grace
       age:
       dog_image: /images/dogs/dog73.jpg
       female: true
       male: false
    -
-      name: name
+      name: Frankie
       age:
       dog_image: /images/dogs/dog74.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Saylor
       age:
       dog_image: /images/dogs/dog76.jpg
       female: true
       male: false
    -
-      name: name
+      name: Beau
       age:
       dog_image: /images/dogs/dog77.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
-      name: name
+      name: Nam Kaeng
       age:
       dog_image: /images/dogs/dog78.jpg
-      female: true
+      female: false
       male: false
    -
-      name: name
-      age:
+      name: Happy
+      age: '1'
       dog_image: /images/dogs/dog79.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
       name: name
       age:
@@ -663,7 +663,7 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Penny
       age:
       dog_image: /images/dogs/dog88.jpg
       female: true
@@ -681,11 +681,11 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Tom
       age:
       dog_image: /images/dogs/dog92.jpg
-      female: true
-      male: false
+      female: false
+      male: true
    -
       name: name
       age:
