all dogs added with names

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -341,6 +341,12 @@ dogs:
    -
       name: name
       age:
+      dog_image: /images/dogs/dog30.jpg
+      female: true
+      male: false
+   -
+      name: name
+      age:
       dog_image: /images/dogs/dog31.jpg
       female: true
       male: false
@@ -677,6 +683,12 @@ dogs:
    -
       name: name
       age:
+      dog_image: /images/dogs/dog90.jpg
+      female: true
+      male: false
+   -
+      name: name
+      age:
       dog_image: /images/dogs/dog91.jpg
       female: true
       male: false
@@ -731,7 +743,49 @@ dogs:
    -
       name: name
       age:
-      dog_image: /images/dogs/dog100.jpg
+      dog_image: /images/dogs/dog101.jpg
+      female: true
+      male: false
+   -
+      name: name
+      age:
+      dog_image: /images/dogs/dog102.jpg
+      female: true
+      male: false
+   -
+      name: Bandit
+      age:
+      dog_image: /images/dogs/dog104.jpg
+      female: false
+      male: true
+      -
+      name: name
+      age:
+      dog_image: /images/dogs/dog105.jpg
+      female: true
+      male: false
+   -
+      name: melon
+      age:
+      dog_image: /images/dogs/dog106.jpg
+      female: false
+      male: true
+   -
+      name: Iris
+      age:
+      dog_image: /images/dogs/dog107.jpg
+      female: true
+      male: false
+   -
+      name: name
+      age:
+      dog_image: /images/dogs/dog109.jpg
+      female: true
+      male: false
+   -
+      name: name
+      age:
+      dog_image: /images/dogs/dog110.jpg
       female: true
       male: false
    -
@@ -741,7 +795,7 @@ dogs:
       female: true
       male: false
    -
-      name: name
+      name: Dixie
       age:
       dog_image: /images/dogs/dog112.jpg
       female: true
