--- a/adopt.html
+++ b/adopt.html
@@ -97,15 +97,15 @@ seo:
   <!-- how to adopt -->
     <div class="col-7_sm-12-middle padded">
       <h3>How to adopt</h3>
-      <p>If you see a dog that you're interested in adopting, you'll need to follow these simple steps:</p>
-      <ol class="padded">
+      <p class="editable">If you see a dog that you're interested in adopting, you'll need to follow these simple steps:</p>
+      <ol class="padded editable">
         <li class="padded-l-1">Fill in the <a href="/download/Thai-Street-Paws-Adoption-Application.pdf" download>application form</a> and return.</li>
         <li class="padded-l-1">If your application passes the first round, you will be scheduled for a Skype / FaceTime interview.</li>
         <li class="padded-l-1">If your application is approved, we will begin looking for a flight angel from Bangkok to an airport near you.</li>
         <li class="padded-l-1">Once the flight angel is secured, travel necessities will be bought and all paperwork completed<./li>
         <li class="padded-l-1">On their arrival, you will meet the flight angel and your dog at the airport.</li>
       </ol>
-      <p>If you're interested in one of the dogs please send a message so we can start the process.</p>
+      <p class="editable">If you're interested in one of the dogs please send a message so we can start the process.</p>
       <a href="#" class="button">Reach out to us</a>
     </div>
     <div class="col-5 padded sm-hide">
@@ -117,20 +117,20 @@ seo:
       <div class="bg-image square" style="background-image: url('{{page.info-dog_image}}');"></div>
     </div>
     <div class="col-7_sm-12-middle padded">
-      <h3>Get more information about specific dogs</h3>
-      <p>Unfortunately we do not have the time and resources to describe every single one of our 160+ dogs online. </p>
-      <p>If you are interested in one of the pups or are looking for more information please don’t hesitate to reach out directly to us! We will provide you with all information you need to find your new best friend.</p>
+      <h3 class="editable">Get more information about specific dogs</h3>
+      <p class="editable">Unfortunately we do not have the time and resources to describe every single one of our 160+ dogs online. </p>
+      <p class="editable">If you are interested in one of the pups or are looking for more information please don’t hesitate to reach out directly to us! We will provide you with all information you need to find your new best friend.</p>
       <a href="/contact.html" class="button">I need more information</a>
     </div>
     
   
     <!-- whats the cost -->
     <div class="col-7_sm-12-middle padded">
-        <h3>What's the cost?</h3>
-        <p>There is no adoption fee when you adopt a Thai Street Paws dog but you will need to pay for the dog's travel costs.
-        <p class="margin-b-0">These include the following:</p>
+        <h3 class="editable">What's the cost?</h3>
+        <p class="editable">There is no adoption fee when you adopt a Thai Street Paws dog but you will need to pay for the dog's travel costs.
+        <p class="margin-b-0 editable">These include the following:</p>
           
-        <ul class="padded">
+        <ul class="padded editable">
           <li class="padded-l-1">IATA approved travel crate</li>
           <li class="padded-l-1"> Microchip</li>
           <li class="padded-l-1">Paperwork fees for export and import of dog</li>
@@ -138,7 +138,7 @@ seo:
           <li class="padded-l-1">Flight from Bangkok to your nearest airport (this cost is significantly reduced when the dog flies with a flight angel)</li>
           <li class="padded-l-1">Lodging for the dog and Tamara in Bangkok</li>
         </ul>
-          <p>Costs vary relative to the size of the dog, as well as the airline. Typically, costs range between US$350 to US$500.</p>
+          <p class="editable">Costs vary relative to the size of the dog, as well as the airline. Typically, costs range between US$350 to US$500.</p>
     </div>
     <div class="col-5 padded sm-hide">
       <div class="bg-image square" style="background-image: url('{{page.cost-dog_image}}');"></div>
