--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ seo:
 
 <!-- small actions big impact -->
 <section class="grid padded">
-    <h2 class="col-12 center">Small actions, big impact.</h2>
+    <h2 class="col-12 center editable">Small actions, big impact.</h2>
     <div class="col-6_md-12 padded">
         <p class="editable">At our Dog Sanctuary, we currently care for over 150 furry residents. These lovable pups don’t pay rent (and don’t plan to anytime soon 😜), but they do need a lot of love, food, and care that come at a cost.</p>
         <p class="editable">Every month, the expenses to feed, shelter, and provide medical care for so many dogs add up quickly. And while our hearts are full, our funds are not. This is where YOU can make a difference.</p> 
