--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,8 @@ seo:
 <section class="padded">
     <div class="grid">
         <div class="col-5_sm-12 padded">
-            <p>If you are interested in adopting, volunteering or have any other enquiries, shoot us a message.</p>
-            <p>We'd love to hear from you! </p>
+            <p class="editable">If you are interested in adopting, volunteering or have any other enquiries, shoot us a message.</p>
+            <p class="editable">We'd love to hear from you! </p>
         </div>
         <!-- contact form -->
         <div class="col-7_sm-12 sm-padded">
