Updated 2 files via CloudCannon.

--- a/about.html
+++ b/about.html
@@ -4,13 +4,14 @@ title: About
 about_image: /images/TSP-7.jpg
 seo:
   title:
-  description:
+  description: >-
+    Tamara Johnston founded Thai Street Paws Rescue in 2012. She continues to
+    save dogs from the streets in the South of Songkhla up until today.
   social_image: /images/logo.png
   twitter_card:
   keywords:
   hide-from-google: false
 ---
-
 <!-- our story -->
 <section class="grid-spaceBetween padded-lg bg-light">
     <div class="col-7-middle_md-12 md-margin-b">
