Updated 3 files via CloudCannon.

--- a/help.html
+++ b/help.html
@@ -10,7 +10,7 @@ sponsor_image: /images/TSP-4.jpg
 share_image: /images/TSP-1.jpg
 seo:
   title:
-  description:
+  description: Find out how you can help Thai Street Paws Dog Rescue here and get involved!
   social_image: /images/logo.png
   twitter_card:
   keywords:
