--- a/adopt.html
+++ b/adopt.html
@@ -6,7 +6,7 @@ cost-dog_image: /images/TSP-2.jpg
 info-dog_image: /images/TSP-9.jpg
 seo:
   title:
-  description:
+  description: Find your new best friend here. Read everything about the adoption process below.
   social_image: /images/logo.png
   twitter_card:
   keywords:
