--- a/all-dogs.html
+++ b/all-dogs.html
@@ -632,6 +632,13 @@ dogs:
       dog_image: /images/dogs/dog112.webp
       female: true
       male: false
+seo:
+   title:
+   description: Meet all of our dogs who are waiting for a loving forever home.
+   social_image: /images/logo.png
+   twitter_card:
+   keywords:
+   hide-from-google: false
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
