--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 seo:
   title:
-  description:
+  description: Contact Thai Street Paws dog rescue by filling out the form or sending an email.
   social_image: /images/logo.png
   twitter_card:
   keywords:
