--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@ seo:
   keywords:
   hide-from-google: false
 ---
-<!-- our story -->
-<section class="grid-spaceBetween padded-lg bg-light">
-    <div class="col-7-middle_md-12 md-margin-b">
+<!-- about tamara -->
+<section class="padded-lg bg-light">
+    <div class="md-margin-b">
     <h2 class="margin-b editable">The power of one to make a change</h2>
     <p class="editable">Founded by Tamara Johnston in 2012, Thai Street Paws Rescue is an organization committed to improving the lives of street dogs in southern Thailand. Originally from Australia, Tamara first encountered the heartbreaking plight of street dogs while living and teaching in Thailand in 2003. After rescuing her first dog, Bella, Tamara realized that the needs of these vulnerable animals were far greater than what local resources could support.</p>
     <p class="editable">As she continued to work in Thailand, the situation became impossible to ignore. The lack of established animal rescue organizations in the southern region of Thailand left many dogs abandoned, sick, and injured. Determined to make a difference, Tamara began feeding, sterilizing, and caring for the local street dogs. But as the number of dogs grew, she began to take them into her home to provide them with the medical care, food, and love they deserved.</p>
@@ -22,7 +22,7 @@ seo:
     <p class="editable">Today, Thai Street Paws Rescue strives to improve the lives of street dogs one paw at a time, while working towards a future where every dog has a safe place to call home.</p>
     <p class="editable">If you're looking for ways to help, or would like to adopt a street dog, please join us in making the lives of Thailand’s street dogs brighter, one paw at a time.</p>
     </div>
-    <div class="col-4_md-12">
+    <div class="capped-width-v-narrow padded md-padded-0">
         <div class="bg-image square md-landscape" style="background-image: url('{{page.about_image}}');"></div>
     </div>
 </section>
