--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@ seo:
 {% include donation-banner.html %}
 
 <!-- small actions big impact -->
-<section class="grid padded">
-    <h2 class="col-12 center editable">Small actions, big impact.</h2>
-    <div class="col-6_md-12 padded">
+<section class="capped-width-narrow padded sm-padded-t sm-padded-b">
+    <div class="padded">
+        <h2 class="center editable padded-b-1">Small actions, big impact.</h2>
         <p class="editable">At our Dog Sanctuary, we currently care for over 150 furry residents. These lovable pups don’t pay rent (and don’t plan to anytime soon 😜), but they do need a lot of love, food, and care that come at a cost.</p>
         <p class="editable">Every month, the expenses to feed, shelter, and provide medical care for so many dogs add up quickly. And while our hearts are full, our funds are not. This is where YOU can make a difference.</p> 
         <p class="editable">By becoming a monthly sponsor, you help us cover the sanctuary’s running costs, including rent, food, medical expenses, and daily care. Your support directly impacts the well-being of each dog, helping them live a healthier, happier life.</p> 
         <p class="editable">Whether you choose to sponsor the entire sanctuary or one special dog, your generosity will make a world of difference. Join us in providing the love and care these dogs truly deserve.</p>
         <p class="editable">Together, we can ensure that every single pup gets the care they need and continue to thrive in a safe, loving environment. Become a sponsor today and help us make a real difference—one wagging tail at a time!</p>
-     </div>
-    <div class="col-6_md-12 padded-sm sm-hide">
-        <div class="bg-image landscape" style="background-image: url('{{page.dog-sanctuary_image}}')"></div>
     </div>
+    <div class="center">
+        <a href="{{index.paypal_url}}" class="button center" target="_blank">Make an impact today</a>
+     </div>
 </section>
 
 {% include adoption-banner.html %}
