pinterest sharing img

--- a/help.html
+++ b/help.html
@@ -77,7 +77,7 @@ seo:
                 <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
                     <i class="fab fa-facebook-f md-size"></i>
                 </a>
-                <a href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}&{{page.social_image}}" rel="nofollow" target="_blank" title="Share on Pinterest">
+                <a href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}&image={{page.social_image}}" rel="nofollow" target="_blank" title="Share on Pinterest">
                 <i class="fab fa-pinterest-p md-size"></i>
                 </a>
             </nav>
