Updated 2 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -141,11 +141,11 @@ dogs:
       female: false
       male: true
    -
-      name: name
+      name: Tiernan
       age:
       dog_image: /images/dogs/dog25.webp
       female: false
-      male: false
+      male: true
    -
       name: name
       age:
