--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ paypal_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
 dog-sanctuary_image: /images/TSP-6.jpg
 seo:
   title:
-  description: Thai Street Paws Rescue is a non-profit organization that resues dogs in need in the South of Thailand in Songkhla.
+  description: >-
+    Thai Street Paws Rescue is a non-profit organization that resues dogs in
+    need in the South of Thailand in Songkhla.
   social_image: /images/logo.png
   twitter_card:
   keywords:
@@ -18,7 +20,9 @@ seo:
 <section class="capped-width-narrow padded sm-padded-t sm-padded-b">
     <div class="padded">
         <h2 class="center editable padded-b-1">Small actions, big impact.</h2>
-        <p class="editable">At our Dog Sanctuary, we currently care for over 150 furry residents. These lovable pups don’t pay rent (and don’t plan to anytime soon 😜), but they do need a lot of love, food, and care that come at a cost.</p>
+        <p class="editable">
+           At our Dog Sanctuary, we currently care for over 150 furry residents. These lovable pups don’t pay rent (and don’t plan to anytime soon 😜), but they do need a lot of love, food, and care that come at a cost.
+        </p>
         <p class="editable">Every month, the expenses to feed, shelter, and provide medical care for so many dogs add up quickly. And while our hearts are full, our funds are not. This is where YOU can make a difference.</p> 
         <p class="editable">By becoming a monthly sponsor, you help us cover the sanctuary’s running costs, including rent, food, medical expenses, and daily care. Your support directly impacts the well-being of each dog, helping them live a healthier, happier life.</p> 
         <p class="editable">Whether you choose to sponsor the entire sanctuary or one special dog, your generosity will make a world of difference. Join us in providing the love and care these dogs truly deserve.</p>
