Updated 3 files via CloudCannon.

--- a/about.html
+++ b/about.html
@@ -19,7 +19,9 @@ seo:
     <p class="editable">Founded by Tamara Johnston in 2012, Thai Street Paws Rescue is an organization committed to improving the lives of street dogs in southern Thailand. Originally from Australia, Tamara first encountered the heartbreaking plight of street dogs while living and teaching in Thailand in 2003. After rescuing her first dog, Bella, Tamara realized that the needs of these vulnerable animals were far greater than what local resources could support.</p>
     <p class="editable">As she continued to work in Thailand, the situation became impossible to ignore. The lack of established animal rescue organizations in the southern region of Thailand left many dogs abandoned, sick, and injured. Determined to make a difference, Tamara began feeding, sterilizing, and caring for the local street dogs. But as the number of dogs grew, she began to take them into her home to provide them with the medical care, food, and love they deserved.</p>
     <p class="editable">Driven by the desire to save as many dogs as possible, Thai Street Paws Rescue was born in 2012 with a clear mission: to vaccinate, sterilize, medicate, feed, and find loving homes for as many dogs as possible.</p>
-    <p class="editable">Today, Thai Street Paws Rescue strives to improve the lives of street dogs one paw at a time, while working towards a future where every dog has a safe place to call home.</p>
+    <p class="editable">
+       Today, Thai Street Paws Rescue strives to improve the lives of street dogs one paw at a time, while working towards a future where every dog has a safe place to call home.
+    </p>
     <p class="editable">If you're looking for ways to help, or would like to adopt a street dog, please join us in making the lives of Thailand’s street dogs brighter, one paw at a time.</p>
     </div>
     <div class="capped-width-v-narrow padded md-padded-0">
