--- a/all-dogs.html
+++ b/all-dogs.html
@@ -632,6 +632,12 @@ dogs:
       dog_image: /images/dogs/dog112.webp
       female: true
       male: false
+   -
+      name: ''
+      age:
+      dog_image: ''
+      female: true
+      male: false
 seo:
    title:
    description: Meet all of our dogs who are waiting for a loving forever home.
